syntax = "proto3";
option java_multiple_files = true;
package grpc;

import "google/protobuf/timestamp.proto";

message RoleDTO {
    int32 id = 1;
    string name = 2;
}

message UserDTO {
    int32 id = 1;
    string username = 2;
    string email = 3;
    string password_hash = 4;
    RoleDTO role = 5;
    google.protobuf.Timestamp created_at = 6;
}

// Request messages
message CreateUserRequest {
    string username = 1;
    string email = 2;
    string password_hash = 3;
    int32 role_id = 4;
}

message GetUserByIdRequest {
    int32 id = 1;
}

message GetUserByUsernameRequest {
    string username = 1;
}

// Response messages
message UserResponse {
    UserDTO user = 1;
}

message RoleResponse {
    RoleDTO role = 1;
}

// User service
service UserService {
    rpc CreateUser (CreateUserRequest) returns (UserResponse);
    rpc GetUserById (GetUserByIdRequest) returns (UserResponse);
    rpc GetUserByUsername (GetUserByUsernameRequest) returns (UserResponse);
}
